--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wallet-connector-extention",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": false,
-  "main": "dist/bundle.js",
+  "main": "dist/wallet-connector-extention.js",
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
@@ -32,19 +32,20 @@
     "web3": "1.7.3"
   },
   "devDependencies": {
-    "@babel/core": "7.24.5",
+    "@babel/core": "^7.24.5",
     "@babel/plugin-transform-runtime": "7.17.0",
-    "@babel/preset-env": "7.16.11",
-    "@babel/preset-react": "7.16.7",
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-react": "^7.24.1",
     "babel-eslint": "10.1.0",
-    "babelify": "10.0.0",
-    "browserify": "17.0.0",
-    "gulp": "4.0.2",
+    "babel-loader": "^9.1.3",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
+    "gulp": "^4.0.2",
     "gulp-connect": "5.7.0",
-    "gulp-eslint-new": "1.4.2",
-    "gulp-sourcemaps": "3.0.0",
+    "gulp-eslint-new": "^1.4.2",
+    "gulp-sourcemaps": "^3.0.0",
     "react-scripts": "5.0.1",
-    "vinyl-buffer": "1.0.1",
-    "vinyl-source-stream": "2.0.0"
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0"
   }
 }
