--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "wallet-connector-extention",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": false,
   "main": "dist/wallet-connector-extention.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "gulp",
-    "build": "gulp build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "gulp build"
   },
   "repository": {
     "type": "git",
@@ -42,9 +43,7 @@
     "browserify": "^17.0.0",
     "gulp": "^4.0.2",
     "gulp-connect": "5.7.0",
-    "gulp-eslint-new": "^1.4.2",
     "gulp-sourcemaps": "^3.0.0",
-    "react-scripts": "5.0.1",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   }
