--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallet-connector-extention",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "private": false,
   "main": "dist/wallet-connector-extention.js",
   "files": [
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "start": "gulp",
-    "build": "gulp build"
+    "build": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -27,9 +27,16 @@
     ]
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^3.7.2",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
     "metamask-extension-provider": "3.0.0",
+    "os-browserify": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "18.0.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "vm-browserify": "^1.1.2",
     "web3": "1.7.3"
   },
   "devDependencies": {
@@ -44,7 +51,11 @@
     "gulp": "^4.0.2",
     "gulp-connect": "5.7.0",
     "gulp-sourcemaps": "^3.0.0",
+    "html-webpack-plugin": "^5.6.0",
     "vinyl-buffer": "^1.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "vinyl-source-stream": "^2.0.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4"
   }
 }
