--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "wallet-connector-extention",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "private": false,
-  "main": "dist/wallet-connector-extention.js",
+  "main": "dist/index.js",
   "files": [
     "dist"
   ],
@@ -29,6 +29,7 @@
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.7.2",
     "crypto-browserify": "^3.12.0",
+    "dotenv": "^16.4.5",
     "https-browserify": "^1.0.0",
     "metamask-extension-provider": "3.0.0",
     "os-browserify": "^0.3.0",
@@ -51,7 +52,6 @@
     "gulp": "^4.0.2",
     "gulp-connect": "5.7.0",
     "gulp-sourcemaps": "^3.0.0",
-    "html-webpack-plugin": "^5.6.0",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "webpack": "^5.91.0",
