--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"],
-    "plugins": ["@babel/transform-runtime"]
+    "presets": [
+        "@babel/preset-env",
+        "@babel/preset-react"
+    ],
+    "plugins": [
+        "@babel/transform-runtime",
+        "transform-inline-environment-variables"
+    ],
 }
