--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallet-connector-extention",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "private": false,
   "main": "dist/index.js",
   "files": [
@@ -33,6 +33,7 @@
     "https-browserify": "^1.0.0",
     "metamask-extension-provider": "3.0.0",
     "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "18.0.0",
     "stream-browserify": "^3.0.0",
@@ -47,6 +48,7 @@
     "@babel/preset-react": "^7.24.1",
     "babel-eslint": "10.1.0",
     "babel-loader": "^9.1.3",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
     "gulp": "^4.0.2",
