--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallet-connector-extention",
-  "version": "0.1.18",
+  "version": "0.1.19",
   "private": false,
   "main": "dist/index.js",
   "files": [
@@ -55,6 +55,7 @@
     "gulp": "^4.0.2",
     "gulp-connect": "5.7.0",
     "gulp-sourcemaps": "^3.0.0",
+    "typescript": "^5.4.5",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0",
     "webpack": "^5.91.0",
