--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallet-connector-extention",
-  "version": "0.1.23",
+  "version": "0.1.24",
   "private": false,
   "main": "dist/index.js",
   "files": [
@@ -28,11 +28,11 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "^3.7.2",
+    "@metamask/inpage-provider": "^8.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
     "https-browserify": "^1.0.0",
-    "metamask-extension-provider": "3.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
