--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallet-connector-extention",
-  "version": "0.1.27",
+  "version": "0.1.28",
   "private": false,
   "main": "dist/index.js",
   "files": [
@@ -31,7 +31,9 @@
     "@metamask/inpage-provider": "^8.1.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "detect-browser": "^5.3.0",
     "dotenv": "^16.4.5",
+    "extension-port-stream": "^3.0.0",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
     "process": "^0.11.10",
