--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     ]
   },
   "dependencies": {
-    "@coinbase/wallet-sdk": "^3.7.2",
+    "@coinbase/wallet-sdk": "^3.9.3",
     "@metamask/inpage-provider": "8.0.3",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
@@ -49,6 +49,10 @@
     "@babel/plugin-transform-runtime": "7.17.0",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
+    "@web3-onboard/coinbase": "^2.2.7",
+    "@web3-onboard/core": "^2.21.6",
+    "@web3-onboard/injected-wallets": "^2.10.16",
+    "@web3-onboard/walletconnect": "^2.5.5",
     "babel-eslint": "10.1.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
