--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wallet-connector-extension",
-  "version": "0.1.34",
+  "version": "0.1.35",
   "private": false,
   "main": "dist/index.js",
   "files": [
@@ -27,7 +27,7 @@
     ]
   },
   "dependencies": {
-    "@coinbase/wallet-sdk": "^3.9.3",
+    "@coinbase/wallet-sdk": "^3.7.2",
     "@metamask/inpage-provider": "8.0.3",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
@@ -42,6 +42,7 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "vm-browserify": "^1.1.2",
+    "wallet-connector-extention": "0.1.31",
     "web3": "1.7.3"
   },
   "devDependencies": {
@@ -49,10 +50,6 @@
     "@babel/plugin-transform-runtime": "7.17.0",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
-    "@web3-onboard/coinbase": "^2.2.7",
-    "@web3-onboard/core": "^2.21.6",
-    "@web3-onboard/injected-wallets": "^2.10.16",
-    "@web3-onboard/walletconnect": "^2.5.5",
     "babel-eslint": "10.1.0",
     "babel-loader": "^9.1.3",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
